--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.crew.mif</groupId>
-    <artifactId>PaskolųCalculator</artifactId>
+    <artifactId>PaskoluCalculator</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>LoanCalculator</name>
 
